// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`QuickActions Snapshots matches snapshot with advanced features 1`] = `
<div
  class="sc-bRKDuR jKddit"
>
  <button
    aria-describedby="test-id"
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="play-circle"
        class="anticon anticon-play-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="play-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
          />
        </svg>
      </span>
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      New Job
    </span>
  </button>
  <button
    aria-describedby="test-id"
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="desktop"
        class="anticon anticon-desktop"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="desktop"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
          />
        </svg>
      </span>
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      New Workstation
    </span>
  </button>
  <button
    aria-describedby="test-id"
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="apartment"
        class="anticon anticon-apartment"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="apartment"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M908 640H804V488c0-4.4-3.6-8-8-8H548v-96h108c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H368c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h108v96H228c-4.4 0-8 3.6-8 8v152H116c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h288c8.8 0 16-7.2 16-16V656c0-8.8-7.2-16-16-16H292v-88h440v88H620c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h288c8.8 0 16-7.2 16-16V656c0-8.8-7.2-16-16-16zm-564 76v168H176V716h168zm84-408V140h168v168H428zm420 576H680V716h168v168z"
          />
        </svg>
      </span>
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      New Workflow
    </span>
  </button>
  <button
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      plus
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      Action 1
    </span>
  </button>
  <button
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      plus
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      Action 2
    </span>
  </button>
  <button
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg sc-hvigdm ctCtkJ"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      plus
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      Action 3
    </span>
  </button>
</div>
`;

exports[`QuickActions Snapshots matches snapshot with basic configuration 1`] = `
<div
  class="sc-bRKDuR hAXCNx"
>
  <button
    aria-describedby="test-id"
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-primary ant-btn-color-primary ant-btn-variant-solid sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="play-circle"
        class="anticon anticon-play-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="play-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M719.4 499.1l-296.1-215A15.9 15.9 0 00398 297v430c0 13.1 14.8 20.5 25.3 12.9l296.1-215a15.9 15.9 0 000-25.8zm-257.6 134V390.9L628.5 512 461.8 633.1z"
          />
        </svg>
      </span>
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      New Job
    </span>
  </button>
  <button
    aria-describedby="test-id"
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="desktop"
        class="anticon anticon-desktop"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="desktop"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M928 140H96c-17.7 0-32 14.3-32 32v496c0 17.7 14.3 32 32 32h380v112H304c-8.8 0-16 7.2-16 16v48c0 4.4 3.6 8 8 8h432c4.4 0 8-3.6 8-8v-48c0-8.8-7.2-16-16-16H548V700h380c17.7 0 32-14.3 32-32V172c0-17.7-14.3-32-32-32zm-40 488H136V212h752v416z"
          />
        </svg>
      </span>
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      New Workstation
    </span>
  </button>
  <button
    aria-describedby="test-id"
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <span
        aria-label="apartment"
        class="anticon anticon-apartment"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="apartment"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M908 640H804V488c0-4.4-3.6-8-8-8H548v-96h108c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H368c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h108v96H228c-4.4 0-8 3.6-8 8v152H116c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h288c8.8 0 16-7.2 16-16V656c0-8.8-7.2-16-16-16H292v-88h440v88H620c-8.8 0-16 7.2-16 16v288c0 8.8 7.2 16 16 16h288c8.8 0 16-7.2 16-16V656c0-8.8-7.2-16-16-16zm-564 76v168H176V716h168zm84-408V140h168v168H428zm420 576H680V716h168v168z"
          />
        </svg>
      </span>
    </span>
    <span
      class="sc-fhHczv czouPK"
    >
      New Workflow
    </span>
  </button>
  <button
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-primary ant-btn-color-primary ant-btn-variant-solid sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="sc-fhHczv czouPK"
    >
      Action 1
    </span>
  </button>
  <button
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined sc-hvigdm bWQmCz"
    type="button"
  >
    <span
      class="sc-fhHczv czouPK"
    >
      Action 2
    </span>
  </button>
  <button
    class="ant-btn css-dev-only-do-not-override-5rmn7t ant-btn-default ant-btn-color-default ant-btn-variant-outlined sc-hvigdm ctCtkJ"
    type="button"
  >
    <span
      class="sc-fhHczv czouPK"
    >
      Action 3
    </span>
  </button>
</div>
`;
